@@ -2,6 +2,8 @@ Changes in version 1.1.3
 
 - fontawesome is directly from the fontawesome package.
 - also inherit row_names_gp and column_names_gp from the complete heatmap
+- content of js and css for specific heatmap is directly add to html instead of
+  containing as files
 
 ------------------------------------------------------------------------------------
 
